syntax = "proto3";

package productReader;

option go_package = "/pb";

import "product_reader_messages.proto";

service ProductReaderService {
  rpc CreateProduct(CreateProductReq) returns (CreateProductRes) {};
  rpc GetProductByID(GetProductByIDReq) returns (GetProductByIDRes) {};
}